--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -22,7 +22,7 @@ img {
 }
 body {
   font-family: 'Yanone Kaffeesatz', sans-serif;
-  background-image: url(/img/AdobeStock_207523524.jpg);
+  background-image: url(../img/AdobeStock_207523524.jpg);
   background-size: no-repeat;
   background-position: center;
   background-size: cover;
