--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -31,3 +31,10 @@
   display: none;
 }
 
+.main {
+  background-image: url(../img/AdobeStock_207523524.jpg);
+  background-size: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-color: blueviolet;
+}
