--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -4,7 +4,7 @@
     display: flex;
       align-items: flex-start;
       overflow: hidden;
-      margin-top: 60px;
+      padding-top: 60px;
     }
     
     .hero-box {
