--- a/css/main.css
+++ b/css/main.css
@@ -104,7 +104,7 @@ a {
   display: none;
 }
 
-.main {
+.body {
   background-image: url(../img/AdobeStock_207523524.jpg);
   background-size: no-repeat;
   background-position: center;
