--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -31,7 +31,7 @@
   display: none;
 }
 
-.main {
+.body {
   background-image: url(../img/AdobeStock_207523524.jpg);
   background-size: no-repeat;
   background-position: center;
