--- a/css/main.css
+++ b/css/main.css
@@ -121,6 +121,7 @@ a {
         -ms-flex-align: start;
             align-items: flex-start;
     overflow: hidden;
+    padding-top: 60px;
   }
   .hero-box {
     display: -webkit-box;
