--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -60,7 +60,8 @@
     }
   }
 @media screen and (min-width: 1200px) {
-  .hero { padding-top: 60px;
+  .hero { 
+    padding-top: 60px;
   }
   .hero-box {
     display: flex;
